[gd_scene load_steps=5 format=2]

[ext_resource path="res://Table.gd" type="Script" id=1]
[ext_resource path="res://gfx/TableBig.png" type="Texture" id=2]
[ext_resource path="res://gfx/Pc/black_on.png" type="Texture" id=3]
[ext_resource path="res://gfx/Chairs/chair_down.png" type="Texture" id=4]

[node name="BigTable" type="Node2D"]
script = ExtResource( 1 )

[node name="Table" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Pc1" type="TextureButton" parent="."]
margin_left = -29.0
margin_top = -18.0
margin_right = 3.0
margin_bottom = 14.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 16, 16 )
texture_normal = ExtResource( 3 )

[node name="Pc2" type="TextureButton" parent="."]
margin_left = -16.0
margin_top = -18.0
margin_right = 16.0
margin_bottom = 14.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 16, 16 )
texture_normal = ExtResource( 3 )

[node name="Pc3" type="TextureButton" parent="."]
margin_left = -3.0
margin_top = -18.0
margin_right = 29.0
margin_bottom = 14.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 16, 16 )
texture_normal = ExtResource( 3 )

[node name="Chair1" type="Sprite" parent="."]
position = Vector2( -13, 12 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="Chair2" type="Sprite" parent="."]
position = Vector2( 0, 12 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="Chair3" type="Sprite" parent="."]
position = Vector2( 13, 12 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
